--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,15 @@
 /* Estilos CSS para el formulario */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #f3d5d53c;
+    color: #8515a0;
     margin: 0;
     padding: 0;
 }
 
 header, footer {
-    background-color: #4CAF50;
-    color: #fff;
+    background-color: hsl(0, 88%, 51%);
+    color: #f4f4f4;
     padding: 20px;
 }
 
@@ -57,7 +57,7 @@ select {
     width: 100%;
     margin-bottom: 15px;
     padding: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid #801c1c;
     border-radius: 4px;
     font-size: 16px;
     font-family: sans-serif;
@@ -66,8 +66,8 @@ select {
 
 input[type="submit"],
 input[type="button"] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #dc7d7d;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -78,7 +78,7 @@ input[type="button"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #3e8e41;
+    background-color: #090909;
 }
 
 span {
@@ -98,18 +98,18 @@ th,
 td {
     padding: 10px;
     text-align: center;
-    border: 5px solid #4CAF50;
-    background-color: #4CAF50;
+    border: 5px solid #708fac;
+    background-color: #b0d9db;
 
 
 }
 
 td {
-    color: #fff;
+    color: #060606;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #5aaedf;
     font-weight: bold;
 }
 
@@ -127,7 +127,7 @@ a{
     text-decoration: none;
 }
 .listado-servicios a {
-    color: #3e8e41;
+    color: #d82c2c54;
     font-size: 20px;
 }
 
